1569 add Travis support